# ANMP

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  Styleguide.md  azure-pipelines.yml  common.cpp  concept.umbrello.xmi  sonar-project.properties
.obs/: workflows.yml
cmake/: AddAnmpTest.cmake  FindFFmpeg.cmake  FindJack.cmake.txt  FindLibSamplerate.cmake  summary.cmake  utils.cmake
contrib/: PKGBUILD  anmp.changes  anmp.desktop  anmp.dsc  anmp.khotkeys  anmp.spec  debian.changelog  debian.control  debian.rules
doc/: concept.umbrello.xmi  initial_concept.umbrello.xmi
gui/: ANMP.pro  CMakeLists.txt  ChannelConfigModel.cpp  ChannelConfigModel.h  ChannelConfigView.cpp  ChannelConfigView.h  PlayheadSlider.cpp  PlayheadSlider.h  PlaylistModel.cpp  PlaylistModel.h  PlaylistView.cpp  PlaylistView.h  configdialog.cpp  configdialog.h  configdialog.ui  main.cpp  mainwindow.callback.cpp  mainwindow.cpp  mainwindow.h  mainwindow.slots.cpp  mainwindow.ui  org.anmp.xml  overlaycontrol.h  playcontrol.ui  songinspector.cpp  songinspector.h  songinspector.ui
gui/applets/: CMakeLists.txt
gui/applets/analyzer/: ASCIIAnalyzer.cpp  ASCIIAnalyzer.h  AnalyzerApplet.cpp  AnalyzerApplet.h  AnalyzerBase.cpp  AnalyzerBase.h  BlockAnalyzer.cpp  BlockAnalyzer.h  CMakeLists.txt  PaletteHandler.cpp  PaletteHandler.h  SpectrogramAnalyzer.cpp  SpectrogramAnalyzer.h  fht.cpp  fht.h
gui/applets/channel/: CMakeLists.txt  channelconfig.cpp  channelconfig.cpp.autosave  channelconfig.h  channelconfig.ui
gui/applets/lyrics/: LyricsApplet.cpp  LyricsApplet.h  LyricsBrowser.cpp  LyricsBrowser.h  LyricsSuggestionsListWidget.cpp  LyricsSuggestionsListWidget.h
gui/img/: icons.orig.odg
include/: anmp.hpp
include/cereal/: access.hpp  cereal.hpp  macros.hpp
include/cereal/archives/: adapters.hpp  binary.hpp  json.hpp  portable_binary.hpp  xml.hpp
include/cereal/details/: helpers.hpp  polymorphic_impl.hpp  polymorphic_impl_fwd.hpp  static_object.hpp  traits.hpp  util.hpp
include/cereal/types/: array.hpp  base_class.hpp  bitset.hpp  boost_variant.hpp  chrono.hpp  common.hpp  complex.hpp  deque.hpp  forward_list.hpp  functional.hpp  list.hpp  memory.hpp  polymorphic.hpp  queue.hpp  set.hpp  stack.hpp  string.hpp  tuple.hpp  unordered_set.hpp  utility.hpp  valarray.hpp  vector.hpp
include/cereal/types/concepts/: pair_associative_container.hpp
src/: ALSAOutput.h  CMakeLists.txt  Config.cpp  Config.h  IAudioOutput.cpp  IAudioOutput.h  IPlaylist.cpp  IPlaylist.h  LazyusfWrapper.cpp  LazyusfWrapper.h  LibSNDWrapper.cpp  LibSNDWrapper.h  OpusWrapper.cpp  OpusWrapper.h  PCMHolder.cpp  PCMHolder.h  Player.cpp  Player.h  PlaylistFactory.cpp  PlaylistFactory.h  Song.cpp  Song.h  SongFormat.cpp  SongFormat.h  SongInfo.cpp  SongInfo.h  VGMStreamWrapper.h  anmp-normalize.cpp  test.cpp
src/AudioOutput/: ALSAOutput.cpp  ALSAOutput.h  CMakeLists.txt  IAudioOutput.cpp  IAudioOutput.h  IAudioOutput_impl.h  JackOutput.cpp  JackOutput.h  PortAudioOutput.cpp  PortAudioOutput.h  WaveOutput.cpp  WaveOutput.h  ebur128Output.cpp  ebur128Output.h
src/Common/: AtomicWrite.cpp  AtomicWrite.h  AudioDriver.c  AudioDriver.h  CMakeLists.txt  Common.cpp  Common.h  CommonExceptions.h  CustomExceptions.cpp  Event.h  LoudnessFile.cpp  LoudnessFile.h  MemoryMapped.cpp  MemoryMapped.h  Nullable.h  PlaylistFactory.cpp  PlaylistFactory.h  PlaylistFactory_impl.h  SampleFormat.c  SampleFormat.h  SongFormat.cpp  SongFormat.h  StringFormatter.cpp  StringFormatter.h  ThreadPriority.cpp  ThreadPriority.h  int24_t.hpp  tree.h  types.h
src/GUI/: ANMP.pro  CMakeLists.txt  PlaylistModel.cpp  PlaylistModel.h  PlaylistView.cpp  PlaylistView.h  configdialog.cpp  configdialog.h  configdialog.ui  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  overlaycontrol.cpp  overlaycontrol.h  overlaycontrol.ui
src/GUI/applets/: CMakeLists.txt
src/GUI/applets/analyzer/: ASCIIAnalyzer.cpp  ASCIIAnalyzer.h  AnalyzerApplet.cpp  AnalyzerApplet.h  AnalyzerApplet.ui  AnalyzerBase.cpp  AnalyzerBase.h  BlockAnalyzer.cpp  BlockAnalyzer.h  CMakeLists.txt  PaletteHandler.cpp  PaletteHandler.h  analyzer_automoc.cpp  fht.cpp  moc_AnalyzerBase.cpp  moc_PaletteHandler.cpp
src/GUI/applets/lyrics/: CMakeLists.txt  LyricsBrowser.cpp  LyricsBrowser.h  LyricsSuggestionsListWidget.h
src/GUI/img/: icons.orig.odg
src/InputLibraryWrapper/: AopsfWrapper.cpp  AopsfWrapper.h  AudioDriver.h  CMakeLists.txt  FFMpegWrapper.cpp  FFMpegWrapper.h  FluidsynthWrapper.cpp  FluidsynthWrapper.h  LazyusfWrapper.cpp  LazyusfWrapper.h  LibGMEWrapper.cpp  LibGMEWrapper.h  LibMadWrapper.cpp  LibMadWrapper.h  LibSNDWrapper.cpp  LibSNDWrapper.h  MidiWrapper.cpp  MidiWrapper.h  ModPlugWrapper.cpp  ModPlugWrapper.h  N64CSeqWrapper.cpp  N64CSeqWrapper.h  OpenMPTWrapper.cpp  OpenMPTWrapper.h  OpusWrapper.cpp  OpusWrapper.h  PCMHolder.h  SampleFormat.h  Song.cpp  Song.h  SongFormat.cpp  SongFormat.h  SongInfo.h  StandardWrapper.cpp  StandardWrapper.h  StandardWrapper_impl.h  VGMStreamWrapper.cpp  VGMStreamWrapper.h  fluid_player_private.h  loop.h
src/PlayerLogic/: CMakeLists.txt  Config.cpp  Config.h  IPlaylist.h  Player.cpp  Player.h  Playlist.cpp  Playlist.h  Song.cpp  Song.h  SongInfo.h  common.cpp
test/: CMakeLists.txt  LoopTest.mid  Test.h  TestCommon.cpp  TestConfigSerialization.cpp  TestJackOutput.cpp  TestLoudnessFile.cpp  TestStandardWrapper.cpp
utils/: CMakeLists.txt  anmp-dump.cpp  anmp-launcher.cpp  anmp-loopify.cpp  anmp-normalize.cpp
